# dsp-benchmark

./: .clang-format  .gitignore  .gitmodules  LICENSE.md  README.md
results/: adsp.csv  imxrt.csv  rpi4.csv
scripts/: apply_clang_format.sh  build.sh  build_adsp.sh  build_imxrt.sh  build_rpi.sh  clean.sh  clean_adsp.sh  clean_imxrt.sh  clean_rpi.sh  format.sh  generate_test_vectors.sh  plot.py
src/: fir_basic.h  fir_circular.h  fir_common.h  log.h  macro.h  main.c  measure.c  measure.h  mem.c  mem.h  test.c  test.h  test_vectors.c  test_vectors.h  timer.h  tp.h  utils.h
src/adsp/: fir_basic.h  fir_circular.h  fir_lib.h
src/imxrt/: fir_basic.h  fir_circular.h  fir_cmsis.h  fir_opt.h
src/rpi/: fir_basic.h  fir_circular.h  fir_cmsis.h  fir_opt.h
targets/adsp-21569-ezkit/: CMakeLists.txt
targets/adsp-21569-ezkit/src/: linker.ldf  startup.s  target.c  tp.c  twi.c  twi.h  vectors.s
targets/mimxrt1170-evkb/: CMakeLists.txt  cm7.ld  config.cmake  flags.cmake
targets/mimxrt1170-evkb/src/: target.c  target.c.new  tp.c
targets/rpi4/: CMakeLists.txt
targets/rpi4/src/: main.c  target.c  tp.c
